# GOL_CM

./: .gitignore
GOL_CLIENT/: CMakeLists.txt  encoder.cpp  encoder.h  fieldscene.cpp  fieldscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclient.h
GOL_CLIENT/tests/: encoder_test.cpp  fieldscene.cpp  fieldscene.h
gol_client/GOL_CLIENT/: GOL_VIS.pro  datahandler.cpp  datahandler.h  fieldscene.cpp  mainwindow.cpp  mainwindow.h  myclient.cpp  myclient.h
gol_server/GOL_SERVER/: CMakeLists.txt  IField.h  cycle.cpp  cycle.h  encoder.cpp  encoder.h  field.cpp  field.h  game.cpp  game.h  gamelogic.cpp  gamelogic.h  icycle.h  iencoder.h  igame.h  igamelogic.h  irule.h  irules.h  iserver.h  iserver_signal.h  isignalhandler.h  main.cpp  mytimer.cpp  mytimer.h  rules.cpp  rules.h  server.cpp  server.h
gol_server/GOL_SERVER/mocks/: mockencoder.h  mockserver.h
gol_server/GOL_SERVER/tests/: cycle_test.cpp  cycle_test.h  encoder_test.cpp  encoder_test.h  field_test.cpp  field_test.h  game.h  game_test.cpp  game_test.h  gamelogic_test.cpp  gamelogic_test.h  mockencoder.h  mockserver.h  rules_test.cpp  rules_test.h  server_test.cpp  server_test.h
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/GOL_SERV_CM_autogen/: deps  mocs_compilation.cpp
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/GOL_SERV_CM_autogen/EWIEGA46WW/: moc_game.cpp  moc_game.cpp.d  moc_server.cpp  moc_server.cpp.d
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/GOL_SERV_CM_autogen/KRHXW7JQHD/: moc_server_test.cpp  (+1 more)
gol_server/build-GOL_SERVER-Desktop_Qt_6_0_4_MSVC2019_64bit-Debug/lib/: gtest_maind.lib
(+213 files in other folders)
